# reachy-emotion

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  deploy.sh  index.html  initial-plan.md  install.sh  pyproject.toml  style.css
src/reachy_emotion/: __init__.py  cloud_client.py  conversation_app.py  gemini_bridge.py  main.py  reachy_handler.py  system_deps.py  tts_announcer.py  voice_input.py
src/reachy_emotion/proto/: emotion.proto
tests/: conftest.py  test_cloud_client.py  test_gemini_bridge.py  test_reachy_handler.py  test_tts_announcer.py  test_voice_input.py
